@@ -1,3 +1,7 @@
+zg 30.01.2017 17:04:33 +0200 - build 4889
+
+1. при вызове ECTL_SETTITLE из EE_REDRAW не сбрасывается буфер консоли.
+
 drkns 24.01.2017 22:13:49 +0000 - build 4888
 
 1. Уточнение 4887.
